kubernetes/apps/self-hosted/excalidraw/app/httproute-outpost.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.dmfrey.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: excalidraw-outpost
spec:
  hostnames:
    - excalidraw.dmfrey.com
  parentRefs:
    - name: envoy-external
      namespace: network
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /outpost.goauthentik.io
      backendRefs:
        - name: ak-outpost-authentik-embedded-outpost
          namespace: security
          port: 9000
