kubernetes/apps/self-hosted/excalidraw/app/securitypolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: excalidraw
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: excalidraw-app
  extAuth:
    headersToExtAuth:
      - Authorization
      - X-Api-Key
      - cookie
    recomputeRoute: true
    http:
      backendRefs:
        - name: ak-outpost-authentik-embedded-outpost
          namespace: security
          port: 9000
      headersToBackend:
        - X-Authentik-Username
        - X-Authentik-Email
        - X-Authentik-Groups
      path: /outpost.goauthentik.io/auth/envoy
